add filter and display data

--- a/GoodList/GoodList/Base.lproj/Main.storyboard
+++ b/GoodList/GoodList/Base.lproj/Main.storyboard
@@ -19,11 +19,14 @@
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="8Fh-J5-206">
                                 <rect key="frame" x="69.5" y="117" width="275" height="32"/>
                                 <segments>
-                                    <segment title="First"/>
+                                    <segment title="All"/>
                                     <segment title="High"/>
                                     <segment title="Medium"/>
                                     <segment title="Low"/>
                                 </segments>
+                                <connections>
+                                    <action selector="priorityValueChangedWithSegmentedControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="xXO-Bo-pIl"/>
+                                </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ES8-bS-yfY">
                                 <rect key="frame" x="0.0" y="156" width="414" height="706"/>
